crates/core-macros/tests/compile/fail/describe_value_enum_named_variant.rs
use actrpc_core::DescribeValue;
use serde::{Deserialize, Serialize};

#[derive(Debug, Clone, PartialEq, Serialize, Deserialize, DescribeValue)]
enum BadEnum {
    Named { value: String },
}

fn main() {}
